[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/WinScreen.gd" type="Script" id=2]
[ext_resource path="res://Afterlife Crisis Ver2.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" parent="." instance=ExtResource( 1 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Timer5" type="Timer" parent="."]
one_shot = true

[node name="YouWin!" type="Control" parent="."]
visible = false
margin_right = 1200.0
margin_bottom = 700.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="YouWin!"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -234.0
margin_top = 96.0
margin_right = 234.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 1 )
text = "You win!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="YouWin!"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -345.0
margin_top = 40.5
margin_right = 345.0
margin_bottom = 117.5
custom_fonts/font = SubResource( 1 )
text = "Play again?"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="pressed" from="YouWin!/Button" to="." method="_on_Button_pressed"]
